app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@add_delegator.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/add_delegator.json
---
[
    "AddDelegator": "Transaction",
    "Transfer": "3.999 LUX to ",
    "Address": "local1mg47uqd7stkvqrp57ds7m28txra45u2uzkta8n",
    "Validator": "NodeID-NFBbbJ4qCmNaCzeW7sxErhvWqvEQMnYcN",
    "Start time": "2020-07-29 22:07:25 UTC",
    "End time": "2020-08-28 21:57:26 UTC",
    "Total stake(LUX)": "2000",
    "Stake": "2000 LUX to ",
    "Address": "local18jma8ppw3nhx5r4ap8clazz0dps7rv5u00z96u",
    "Rewards to": "local1mg47uqd7stkvqrp57ds7m28txra45u2uzkta8n",
    "Fee(LUX)": "0.001",
]
