app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@no_decimal.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/no_decimal.json
---
[
    "Transfer": "Transaction",
    "Transfer": "1 LUX to ",
    "Address": "fuji12yp9cc0melq83a5nxnurf0nd6fk4t224unmnwx",
    "Fee(LUX)": "1",
]
